hphp/hack/test/typecheck/array_map7.php.like_types.exp
File "array_map7.php", line 24, characters 3-32:
  array
File "array_map7.php", line 27, characters 3-34:
  _
File "array_map7.php", line 25, characters 33-45:
Invalid argument (Typing[4110])
File "stdlib/builtins_array.hhi", line 115, characters 10-18:
Expected Container<[unresolved]>
File "array_map7.php", line 13, characters 3-15:
But got dynamic because it is an unenforceable type
